# Aethereal

./: .clang-format  .gitignore  .prettierrc  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.cache/clangd/index/: BearLibTerminal.h.18D19AE69CA413B6.idx  fecs.h.57803DFF3BB87968.idx  fecs.h.B1FAADCAD0599EC0.idx  game.cpp.B855040A01EFE49D.idx  game.cpp.BFC7ED495018BF59.idx  game.cpp.D30AC5A0F6AED6C4.idx  game.h.25316AC52850A00C.idx  game.h.6591C5C3542599C3.idx  game_state.cpp.1DA8785B191A8B49.idx  game_state.h.682ABE2BFFECDE50.idx  input_manager.cpp.557D998A418A4A2B.idx  main.cpp.15B324C74D9E2857.idx  main.cpp.BE76FFEC5EFB7E11.idx  main.cpp.E41C786CA3078C92.idx  screen.cpp.005FBC767C32399F.idx  sparse_set.h.0428EA652664BCC2.idx  sparse_set.h.99D0276AD242ACED.idx
includes/: fecs.h
includes/fecs/: FECS.h
libs/bearlibterminal/arm64/: libBearLibTerminal.dylib
resources/data/: color.json  items.json  species.json  talent.json  world.json  world_tiles.json
resources/json/: species.json  talents.json
resources/json/areas/: area.json
resources/json/map/: map.json  village.json  villageArea1.json
resources/scripts/species/: drelkin.lua  elf.lua  human.lua  varnari.lua
resources/scripts/talents/: magician.lua  marksman.lua  swordsman.lua  talentless.lua
resources/scripts/weapons/: eclipseEdge.lua  sword.lua
src/: aethereal.cpp  aethereal.h  logging.h
src/components/: camera_component.h  collider_component.h  name_component.h  player_component.h  position_component.h  render_component.h  species_component.h  tags.h  talent_component.h  velocity_component.h  world_component.h
src/components/character/: name_component.h  species_component.h  talent_component.h
src/components/identifiers/: harvest_indicator_component.h
src/components/interaction/: harvest_component.h  input_mode_component.h
src/components/inventory/: inventory_component.h
src/components/tags/: player_component.h
src/components/world/: world_component.h
src/context/: context.h
src/data/: ids.cpp  ids.h
src/data/database/: database.cpp  database.h
src/data/enums/: direction.h  unicodes.h
src/data_manager/: data_manager.cpp  data_manager.h
src/database/: database.cpp  database.h
src/ecs/: ecs.h
src/ecs/components/: level_component.h  name_component.h  player_component.h
src/editor/: editor.cpp  editor.h
src/game/: game.cpp  game.h
src/game/state/: game_state.cpp  game_state.h
src/game_state/: game_state.cpp  game_state.h
src/input/: input_handler.h  input_manager.cpp  input_manager.h
src/math/: math.h
src/render_framework/: render_framework.cpp  render_framework.h
src/renderer/: renderer.cpp  renderer.h
src/screen/: screen.cpp  screen.h  screen_base.h  screen_interface.h
src/screen/inventory/: inventory.cpp  inventory.h
src/screen/main_menu/: main_menu.cpp  main_menu.h  name.cpp  name.h  species.cpp  species.h  talent.cpp  talent.h
src/screen/manager/: screen_manager.cpp  screen_manager.h
src/screen/screen_manager/: screen_manager.cpp  screen_manager.h
src/screen/screens/: empty.cpp  (+1 more)
src/screens/: screen.cpp  screen.h
src/services/: service_locator.h
src/system/: system.h  systemManager.cpp  systemManager.h
src/terminal/: terminal.cpp  terminal.h
src/utility/: drawing.h  logging.h
(+92 files in other folders)
